Did some basic improvements on the race styling

--- a/SimTECH/SimTECH/Pages/Factors/Climates.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Climates.razor
@@ -15,12 +15,12 @@
                     <MudIcon Icon="@context.Item.Icon" />
                 </CellTemplate>
             </TemplateColumn>
-            <PropertyColumn Property="e => e.Terminology" />
-            <PropertyColumn Property="e => e.IsWet" Title=" For wet" />
-            <PropertyColumn Property="e => e.EngineMultiplier" Title="Engine" />
-            <PropertyColumn Property="e => e.ReliablityModifier" Title="Reliability" />
-            <PropertyColumn Property="e => e.RngModifier" Title="RNG" />
-            <PropertyColumn Property="e => e.Odds" />
+            <PropertyColumn Property="e => e!.Terminology" />
+            <PropertyColumn Property="e => e!.IsWet" Title="For wet" />
+            <PropertyColumn Property="e => e!.EngineMultiplier" Title="Engine" />
+            <PropertyColumn Property="e => e!.ReliablityModifier" Title="Reliability" />
+            <PropertyColumn Property="e => e!.RngModifier" Title="RNG" />
+            <PropertyColumn Property="e => e!.Odds" />
             <TemplateColumn T="Climate" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
