--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -759,7 +759,7 @@
             model.DriverId = driver.Id;
             model.Driver = driver;
 
-            if (!_config.Value.PersonalNumbers)
+            if (!_config.Value.PersonalNumbersEnabled)
                 model.Number = ++indexer;
 
             Model.SeasonDrivers.Add(model);
