--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -5,8 +5,7 @@
 
 <PageTitle>Post Race</PageTitle>
 
-@if (!loading)
-{
+<MudContainer MaxWidth="MaxWidth.False">
     <MudGrid>
         <MudItem xs=12>
             <MudPaper Elevation="15" Height="200px" Class="pa-4">
@@ -48,9 +47,9 @@
                         </MudTd>
                         <MudTd>
                             <MudText>@(context.SeasonDriver.Driver.FullName)</MudText>
-                        </MudTd>
-                        <MudTd>
-                            @if (context.Status == RaceStatus.Racing)
+                            </MudTd>
+                            <MudTd>
+                                @if (context.Status == RaceStatus.Racing)
                             {
                                 <MudText Typo="Typo.caption">@(ReadScoredResult(context.Position, (context.Grid == 1)))</MudText>
                             }
@@ -105,7 +104,7 @@
             </MudPaper>
         </MudItem>
     </MudGrid>
-}
+</MudContainer>
 
 @code {
     [Parameter] public long RaceId { get; set; }
@@ -120,11 +119,10 @@
     protected override async Task OnInitializedAsync()
     {
         Race = await _raceService.GetRaceById(RaceId);
-
-        Season = await _seasonService.GetSeasonById(Race.SeasonId);
-        allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
-
         Results = await _raceService.GetResultsOfRace(RaceId);
+        Season = await _seasonService.GetSeasonById(Race.SeasonId);
+
+        allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
 
         loading = false;
     }
